workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/GarantiaProduto_Event__e.object-meta.xml
<CustomObject>
    <label>GarantiaProduto Event</label>
    <pluralLabel>GarantiaProduto Events</pluralLabel>
</CustomObject>