workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CancelaDependentes__c.field-meta.xml
<CustomField>
    <fullName>CancelaDependentes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CancelaDependentes</label>
    <type>Checkbox</type>
</CustomField>