workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CancelaGarantia__c.field-meta.xml
<CustomField>
    <fullName>CancelaGarantia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CancelaGarantia</label>
    <type>Checkbox</type>
</CustomField>