workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CancelaSegurado__c.field-meta.xml
<CustomField>
    <fullName>CancelaSegurado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CancelaSegurado</label>
    <type>Checkbox</type>
</CustomField>