workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CapitalRiscos__c.field-meta.xml
<CustomField>
    <fullName>CapitalRiscos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CapitalRiscos</label>
    <type>Checkbox</type>
</CustomField>