workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CaracteristicaGarantia__c.field-meta.xml
<CustomField>
    <fullName>CaracteristicaGarantia__c</fullName>
    <label>CaracteristicaGarantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>