workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CodigoPlanoSusep__c.field-meta.xml
<CustomField>
    <fullName>CodigoPlanoSusep__c</fullName>
    <label>CodigoPlanoSusep</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>