workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CodigoPromocao__c.field-meta.xml
<CustomField>
    <fullName>CodigoPromocao__c</fullName>
    <label>CodigoPromocao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>