workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/ComunicarEtapasSinistro__c.field-meta.xml
<CustomField>
    <fullName>ComunicarEtapasSinistro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ComunicarEtapasSinistro</label>
    <type>Checkbox</type>
</CustomField>