workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/CustoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>CustoCaracteristicaEspecial__c</fullName>
    <label>CustoCaracteristicaEspecial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>