workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/DataSolicitacao__c.field-meta.xml
<CustomField>
    <fullName>DataSolicitacao__c</fullName>
    <label>DataSolicitacao</label>
    <type>Date</type>
</CustomField>