workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/DemonstracaoCapital__c.field-meta.xml
<CustomField>
    <fullName>DemonstracaoCapital__c</fullName>
    <label>DemonstracaoCapital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>