workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/DemonstracaoPremio__c.field-meta.xml
<CustomField>
    <fullName>DemonstracaoPremio__c</fullName>
    <label>DemonstracaoPremio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>