workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/DependentesCancelar__c.field-meta.xml
<CustomField>
    <fullName>DependentesCancelar__c</fullName>
    <label>DependentesCancelar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>