workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/DocumentosAviso__c.field-meta.xml
<CustomField>
    <fullName>DocumentosAviso__c</fullName>
    <label>DocumentosAviso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>