workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/FinalidadeRemissao__c.field-meta.xml
<CustomField>
    <fullName>FinalidadeRemissao__c</fullName>
    <label>FinalidadeRemissao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>