workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/FormaExibicaoCapital__c.field-meta.xml
<CustomField>
    <fullName>FormaExibicaoCapital__c</fullName>
    <label>FormaExibicaoCapital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>