workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <label>Garantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>