workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/GarantiaDeduzir__c.field-meta.xml
<CustomField>
    <fullName>GarantiaDeduzir__c</fullName>
    <label>GarantiaDeduzir</label>
    <length>255</length>
    <type>Text</type>
</CustomField>