workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/GarantiaLimitadora__c.field-meta.xml
<CustomField>
    <fullName>GarantiaLimitadora__c</fullName>
    <label>GarantiaLimitadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>