workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/Intervalo__c.field-meta.xml
<CustomField>
    <fullName>Intervalo__c</fullName>
    <label>Intervalo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>