workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteCapitalMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapitalMaximo__c</fullName>
    <label>LimiteCapitalMaximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>