workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteCapitalMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapitalMinimo__c</fullName>
    <label>LimiteCapitalMinimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>