workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteIdadeMaximo__c.field-meta.xml
<CustomField>
    <fullName>LimiteIdadeMaximo__c</fullName>
    <label>LimiteIdadeMaximo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>