workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteIdadeMinimo__c.field-meta.xml
<CustomField>
    <fullName>LimiteIdadeMinimo__c</fullName>
    <label>LimiteIdadeMinimo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>