workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteMaximoUtilizacao__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximoUtilizacao__c</fullName>
    <label>LimiteMaximoUtilizacao</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>