workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteMinimoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimoCaracteristicaEspecial__c</fullName>
    <label>LimiteMinimoCaracteristicaEspecial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>