workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/LimiteReintegracoes__c.field-meta.xml
<CustomField>
    <fullName>LimiteReintegracoes__c</fullName>
    <label>LimiteReintegracoes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>