workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <label>Modalidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>