workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/Obrigatoria__c.field-meta.xml
<CustomField>
    <fullName>Obrigatoria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obrigatoria</label>
    <type>Checkbox</type>
</CustomField>