workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/OrdemPrioridade__c.field-meta.xml
<CustomField>
    <fullName>OrdemPrioridade__c</fullName>
    <label>OrdemPrioridade</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>