workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/OrigemSinistroBeneficio__c.field-meta.xml
<CustomField>
    <fullName>OrigemSinistroBeneficio__c</fullName>
    <label>OrigemSinistroBeneficio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>