workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PassivelResseguro__c.field-meta.xml
<CustomField>
    <fullName>PassivelResseguro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PassivelResseguro</label>
    <type>Checkbox</type>
</CustomField>