workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PercentualAgravoMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualAgravoMaximo__c</fullName>
    <label>PercentualAgravoMaximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>