workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PercentualCapitalMaximo__c.field-meta.xml
<CustomField>
    <fullName>PercentualCapitalMaximo__c</fullName>
    <label>PercentualCapitalMaximo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>