workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PercentualCapitalMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualCapitalMinimo__c</fullName>
    <label>PercentualCapitalMinimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>