workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PercentualDescontoMinimo__c.field-meta.xml
<CustomField>
    <fullName>PercentualDescontoMinimo__c</fullName>
    <label>PercentualDescontoMinimo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>