workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PercentualMaximoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>PercentualMaximoCancelamento__c</fullName>
    <label>PercentualMaximoCancelamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>