workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PeriodoRemissao__c.field-meta.xml
<CustomField>
    <fullName>PeriodoRemissao__c</fullName>
    <label>PeriodoRemissao</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>