workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PermiteExibicao__c.field-meta.xml
<CustomField>
    <fullName>PermiteExibicao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PermiteExibicao</label>
    <type>Checkbox</type>
</CustomField>