workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PrazoAvisoSinistro__c.field-meta.xml
<CustomField>
    <fullName>PrazoAvisoSinistro__c</fullName>
    <label>PrazoAvisoSinistro</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>