workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/PrazoMaximoLiquidacao__c.field-meta.xml
<CustomField>
    <fullName>PrazoMaximoLiquidacao__c</fullName>
    <label>PrazoMaximoLiquidacao</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>