workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/Prestadora__c.field-meta.xml
<CustomField>
    <fullName>Prestadora__c</fullName>
    <label>Prestadora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>