workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/QuantidadeDependentes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDependentes__c</fullName>
    <label>QuantidadeDependentes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>