workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/QuantidadeMaximaContratacao__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeMaximaContratacao__c</fullName>
    <label>QuantidadeMaximaContratacao</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>