workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/RiscosCobertos__c.field-meta.xml
<CustomField>
    <fullName>RiscosCobertos__c</fullName>
    <label>RiscosCobertos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>