workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/RiscosExcluidos__c.field-meta.xml
<CustomField>
    <fullName>RiscosExcluidos__c</fullName>
    <label>RiscosExcluidos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>