workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TempoContagem__c.field-meta.xml
<CustomField>
    <fullName>TempoContagem__c</fullName>
    <label>TempoContagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>