workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoBeneficiario__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficiario__c</fullName>
    <label>TipoBeneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>