workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>TipoCaracteristicaEspecial__c</fullName>
    <label>TipoCaracteristicaEspecial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>