workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoCobranca__c.field-meta.xml
<CustomField>
    <fullName>TipoCobranca__c</fullName>
    <label>TipoCobranca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>