workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoGarantia__c.field-meta.xml
<CustomField>
    <fullName>TipoGarantia__c</fullName>
    <label>TipoGarantia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>