workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoLimiteCapital__c.field-meta.xml
<CustomField>
    <fullName>TipoLimiteCapital__c</fullName>
    <label>TipoLimiteCapital</label>
    <length>255</length>
    <type>Text</type>
</CustomField>