workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoPagamento__c.field-meta.xml
<CustomField>
    <fullName>TipoPagamento__c</fullName>
    <label>TipoPagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>