workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoPrazoAvisoSinistro__c.field-meta.xml
<CustomField>
    <fullName>TipoPrazoAvisoSinistro__c</fullName>
    <label>TipoPrazoAvisoSinistro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>