workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoPrazoMaximoLiquidacao__c.field-meta.xml
<CustomField>
    <fullName>TipoPrazoMaximoLiquidacao__c</fullName>
    <label>TipoPrazoMaximoLiquidacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>