workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/TipoReintegracao__c.field-meta.xml
<CustomField>
    <fullName>TipoReintegracao__c</fullName>
    <label>TipoReintegracao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>