workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/ValorFinal__c.field-meta.xml
<CustomField>
    <fullName>ValorFinal__c</fullName>
    <label>ValorFinal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>