workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/ValorInicial__c.field-meta.xml
<CustomField>
    <fullName>ValorInicial__c</fullName>
    <label>ValorInicial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>