workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/ValorServico__c.field-meta.xml
<CustomField>
    <fullName>ValorServico__c</fullName>
    <label>ValorServico</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>