workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/ValorTitulo__c.field-meta.xml
<CustomField>
    <fullName>ValorTitulo__c</fullName>
    <label>ValorTitulo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>