workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/ValorVidaAtiva__c.field-meta.xml
<CustomField>
    <fullName>ValorVidaAtiva__c</fullName>
    <label>ValorVidaAtiva</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>