workspace-sf/force-app/main/default/objects/GarantiaProduto_Event__e/fields/VersaoTitulo__c.field-meta.xml
<CustomField>
    <fullName>VersaoTitulo__c</fullName>
    <label>VersaoTitulo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>